# umami-dragonfruit

./: COPYING  README.md
build_msvc/: msvc-autogen.py  vcpkg.json
build_msvc/sugarchaind/: bitcoind.vcxproj
ci/: lint_imagefile
ci/test/: 00_setup_env_i686_multiprocess.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_msan.sh  00_setup_env_native_nowallet_libsugarchainkernel.sh  00_setup_env_native_tidy.sh  00_setup_env_s390x.sh  wrap-valgrind.sh
contrib/: valgrind.supp
contrib/debian/: copyright
contrib/devtools/: security-check.py  symbol-check.py  test-symbol-check.py
contrib/devtools/sugarchain-tidy/: CMakeLists.txt  README  example_logprintf.cpp  logprintf.cpp  logprintf.h  sugarchain-tidy.cpp
contrib/guix/: README.md  guix-build  guix-codesign  manifest.scm
contrib/macdeploy/: README.md  detached-sig-create.sh
contrib/message-capture/: message-capture-parser.py
contrib/seeds/: asmap.py  makeseeds.py
contrib/signet/: README.md  getcoins.py  miner
contrib/verify-binaries/: verify.py
depends/: packages.md
doc/: stratum-v2.md
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.h  banman.cpp  banman.h  blockencodings.cpp  blockfilter.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  clientversion.cpp  coins.cpp  coins.h  core_read.cpp  dbwrapper.cpp  dbwrapper.h  dummywallet.cpp  external_signer.cpp  hash.cpp  hash.h  headerssync.cpp  httprpc.cpp  httpserver.cpp  httpserver.h  i2p.cpp  init.cpp  key.h  logging.cpp  logging.h  mapport.cpp  net.cpp  (+22 more)
src/bench/: checkblock.cpp  coin_selection.cpp  descriptors.cpp  load_external.cpp  rpc_blockchain.cpp  verify_script.cpp  wallet_create.cpp  wallet_create_tx.cpp  wallet_ismine.cpp  wallet_loading.cpp
src/common/: args.cpp  run_command.cpp  settings.cpp  sv2_transport.cpp  sv2_transport.h  system.cpp  system.h  transport.h
src/compat/: endian.h
src/consensus/: params.h
src/crypto/: chacha20poly1305.cpp  common.h  sha256.cpp
src/init/: common.cpp  common.h  sugarchain-gui.cpp  sugarchain-node.cpp  sugarchain-qt.cpp  sugarchaind.cpp
src/ipc/: interfaces.cpp
src/kernel/: checks.h  mempool_persist.h
src/node/: blockstorage.cpp  blockstorage.h  chainstate.h  (+7 more)
(+106 files in other folders)
